0026387: BRepPrimAPI_MakePrism crash when extruding Paraboloid face.

Test-cases for issue #26387